style cards and fix positions

--- a/src/components/Navbar.module.scss
+++ b/src/components/Navbar.module.scss
@@ -21,11 +21,9 @@
     padding: 0;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     font-size: 14px;
     color: #fffeff;
     cursor: pointer;
   }
-
-  //   li {
-  //   }
 }
