--- a/src/style.scss
+++ b/src/style.scss
@@ -32,12 +32,6 @@ body {
   margin: 0;
   font-family: $font-stack;
   background-color: #0e0e0e;
-}
-
-.container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #fafafa;
-  max-width: 1440px;
+  justify-content: center;
 }
