rearrange components architecture

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -7,7 +7,7 @@
   position: fixed;
   background: transparent;
   z-index: 1;
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.75);
+  // text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.75);
 
   .logo {
     color: #fef8f0;
