--- a/src/pages/Project.module.scss
+++ b/src/pages/Project.module.scss
@@ -16,6 +16,8 @@
     flex-direction: column;
     align-items: center;
     gap: 26px;
-    margin-bottom: 124px;
+    margin-bottom: 32px;
+    position: relative;
+    bottom: 92px;
   }
 }
