--- a/src/style.scss
+++ b/src/style.scss
@@ -15,8 +15,8 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
 $font-stack: "Commissioner", sans-serif;
-$primary-color: #3c7874;
-$hover-color: #144744;
+$primary-color: #3cb4ab;
+$hover-color: #157a74;
 
 @mixin center-div {
   display: flex;
@@ -34,4 +34,9 @@ body {
   background-color: #0e0e0e;
   display: flex;
   justify-content: center;
+}
+
+.modal-width {
+  width: 730px;
+  max-width: none !important;
 }
