--- a/src/components/HeroImage/Hero.module.scss
+++ b/src/components/HeroImage/Hero.module.scss
@@ -1,10 +1,18 @@
 .hero {
-  background-image: linear-gradient(
-      to top,
-      rgba(0, 0, 0, 0) 0%,
-      rgba(0, 0, 0, 0.25) 100%
-    ),
-    url("../../images/image-hero-desktop.jpg");
-  width: 1440px;
-  height: 400px;
+  background-image: url("../../images/image-hero-mobile.jpg");
+  background-size: cover;
+  width: 375px;
+  height: 300px;
+
+  // DESKTOP
+  @media (min-width: 1440px) {
+    background-image: linear-gradient(
+        to top,
+        rgba(0, 0, 0, 0) 0%,
+        rgba(0, 0, 0, 0.25) 100%
+      ),
+      url("../../images/image-hero-desktop.jpg");
+    width: 1440px;
+    height: 400px;
+  }
 }
