--- a/src/pages/Project.module.scss
+++ b/src/pages/Project.module.scss
@@ -1,7 +1,12 @@
 @mixin cardDesign {
-  width: 728px;
+  width: 326px;
   background: #fff;
-  border-radius: 10px;
+  border-radius: 7px;
+  // Desktop
+  @media (min-width: 1440px) {
+    width: 728px;
+    border-radius: 10px;
+  }
 }
 
 .container {
@@ -9,15 +14,25 @@
   flex-direction: column;
   align-items: center;
   background-color: #fafafa;
-  width: 1440px;
+  width: 375px;
+  // Desktop
+  @media (min-width: 1440px) {
+    width: 1440px;
+  }
 
   .mainSection {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 26px;
-    margin-bottom: 32px;
+    gap: 24px;
+    margin-bottom: 18px;
     position: relative;
-    bottom: 92px;
+    bottom: 55px;
+    // Desktop
+    @media (min-width: 1440px) {
+      gap: 26px;
+      bottom: 92px;
+      margin-bottom: 32px;
+    }
   }
 }
