build modal for navbar menu

--- a/src/components/ModalCard/ModalCard.module.scss
+++ b/src/components/ModalCard/ModalCard.module.scss
@@ -1,9 +1,10 @@
-// .modal {
-//   font-weight: 700;
-//   font-size: 40px;
-//   color: orange;
-// }
+.modal {
+  // Desktop
+  //   @media (min-width: 1440px) {
+  //     width: 728px;
+  //   }
+}
 
-// .text {
+// .modalWidth {
 //   color: red;
 // }
