--- a/src/style.scss
+++ b/src/style.scss
@@ -36,7 +36,17 @@ body {
   justify-content: center;
 }
 
-.modal-width {
-  width: 326px;
-  max-width: none !important;
+// .modal-width {
+//   width: 326px;
+// }
+
+.modal-dialog {
+  max-width: 326px;
+  @media (min-width: 1440px) {
+    max-width: 728px;
+  }
+}
+
+.modal-backdrop {
+  background: linear-gradient(transparent, 40%, black);
 }
