--- a/src/style.scss
+++ b/src/style.scss
@@ -1,27 +1,36 @@
 // Override default variables before the import
 // $body-bg: #000;
 // $primary: yellow;
-
-// $grid-breakpoints: (
-//   xs: 0,
-//   sm: 375px,
-//   // sm: 576px
-//   md: 768px,
-//   lg: 992px,
-//   xl: 1200px,
-//   xxl: 1440px // xxl: 1400px,,,,,,,,,,,,,,,,,,,,,,
-// );
+$info: #3cb4ab;
 
 @import "~bootstrap/scss/bootstrap.scss";
 
 $font-stack: "Commissioner", sans-serif;
 $primary-color: #3cb4ab;
 $hover-color: #157a74;
+$paragraph-color: #959595;
 
 @mixin center-div {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@mixin selectRewardBtn {
+  width: 156px;
+  height: 50px;
+  border-radius: 24px;
+  border: none;
+  color: #e1fbfb;
+  background: $primary-color;
+  font-family: $font-stack;
+  font-weight: 700;
+  // Desktop
+  @media (min-width: 1440px) {
+    &:hover {
+      background: $hover-color;
+    }
+  }
 }
 
 * {
@@ -36,12 +45,11 @@ body {
   justify-content: center;
 }
 
-// .modal-width {
-//   width: 326px;
-// }
-
 .modal-dialog {
   max-width: 326px;
+  margin: 0 auto;
+
+  // Desktop
   @media (min-width: 1440px) {
     max-width: 728px;
   }
@@ -49,4 +57,8 @@ body {
 
 .modal-backdrop {
   background: linear-gradient(transparent, 40%, black);
+}
+
+.progress-bar {
+  border-radius: 14px;
 }
