--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -15,6 +15,7 @@
   font-size: 14px;
   line-height: 25px;
   color: $paragraph-color;
+  white-space: pre-wrap;
   @media (min-width: 1440px) {
     font-size: 16px;
     line-height: 30px;
