--- a/src/components/ModalCard/ModalCard.module.scss
+++ b/src/components/ModalCard/ModalCard.module.scss
@@ -34,8 +34,12 @@
   .modalClose {
     height: 15px;
     cursor: pointer;
-    margin-top: -25px;
-    margin-right: -25px;
+    // margin-top: -25px;
+    // margin-right: -25px;
+    @media (min-width: 1440px) {
+      margin-top: -25px;
+      margin-right: -15px;
+    }
   }
 
   .introduction {
@@ -50,21 +54,12 @@
     }
   }
 
-  .campaignCard {
-    border: 1px solid #d5d0d0;
-    border-radius: 7px;
-    padding: 20px 22px 16px 22px;
-    font-size: 14px;
-    margin-top: 24px;
-    margin-bottom: 24px;
-    @media (min-width: 1440px) {
-      padding: 24px 28px 24px 27px;
-      position: relative;
-    }
+  .campaignCard,
+  .campaignCardDisabled {
+    @include campaignCardModal;
   }
 
-  .product,
-  .noProduct {
+  .product {
     font-weight: 700;
     @media (min-width: 1440px) {
       font-size: 16px;
@@ -73,53 +68,20 @@
   }
 
   input[type="radio"] {
-    border: 1px solid #d5d0d0;
-    border-radius: 50%;
-    -webkit-appearance: none;
-    width: 22px;
-    height: 22px;
-    margin-right: 16px;
-    outline: none;
-    cursor: pointer;
-    @media (min-width: 1440px) {
-      width: 24px;
-      height: 24px;
-      margin-right: 25px;
-    }
-    &:hover {
-      box-shadow: 0 0 5px 0px $primary-color inset;
-    }
-    &:before {
-      content: "";
-      display: block;
-      width: 60%;
-      height: 60%;
-      margin: 20% auto;
-      border-radius: 50%;
-      @media (min-width: 1440px) {
-        margin: 20% 22%;
-      }
-    }
-    &:checked:before {
-      background: $primary-color;
+    @include radioButton;
+  }
+
+  .campaignCardDisabled {
+    opacity: 0.5;
+    input:hover {
+      box-shadow: none;
+      cursor: default;
     }
   }
 
-  .inputAndLabel,
   .inputLabelAndPledgeAmount {
     display: flex;
     align-items: center;
-  }
-
-  .inputAndLabel {
-    padding-top: 12px;
-    margin-bottom: 34px;
-    @media (min-width: 1440px) {
-      margin-bottom: 0;
-      padding-bottom: 8px;
-    }
-  }
-  .inputLabelAndPledgeAmount {
     margin-bottom: 26px;
     @media (min-width: 1440px) {
       margin-bottom: 0;
@@ -149,15 +111,7 @@
   }
 
   .description {
-    color: $paragraph-color;
-    margin-bottom: 14px;
-    line-height: 24px;
-    @media (min-width: 1440px) {
-      font-size: 15px;
-      line-height: 28px;
-      padding-left: 50px;
-      margin-bottom: 8px;
-    }
+    @include productDescriptionModal;
   }
 
   .stockLeft {
