--- a/src/style.scss
+++ b/src/style.scss
@@ -10,12 +10,6 @@ $primary-color: #3cb4ab;
 $hover-color: #157a74;
 $paragraph-color: #959595;
 
-@mixin center-div {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 @mixin selectRewardBtn {
   width: 156px;
   height: 50px;
@@ -30,6 +24,66 @@ $paragraph-color: #959595;
     &:hover {
       background: $hover-color;
     }
+  }
+}
+
+@mixin campaignCardModal {
+  border: 1px solid #d5d0d0;
+  border-radius: 7px;
+  padding: 20px 22px 16px 22px;
+  font-size: 14px;
+  margin-top: 24px;
+  margin-bottom: 24px;
+  @media (min-width: 1440px) {
+    padding: 24px 28px 24px 27px;
+    position: relative;
+  }
+}
+
+@mixin productDescriptionModal {
+  color: $paragraph-color;
+  margin-bottom: 14px;
+  line-height: 24px;
+  @media (min-width: 1440px) {
+    font-size: 15px;
+    line-height: 28px;
+    padding-left: 50px;
+    margin-bottom: 8px;
+  }
+}
+
+@mixin radioButton {
+  border: 1px solid #d5d0d0;
+  border-radius: 50%;
+  -webkit-appearance: none;
+  width: 22px;
+  height: 22px;
+  margin-right: 16px;
+  outline: none;
+  @media (min-width: 1440px) {
+    cursor: pointer;
+    width: 24px;
+    height: 24px;
+    margin-right: 25px;
+  }
+  &:hover {
+    @media (min-width: 1440px) {
+      box-shadow: 0 0 5px 0px $primary-color inset;
+    }
+  }
+  &:before {
+    content: "";
+    display: block;
+    width: 60%;
+    height: 60%;
+    margin: 20% auto;
+    border-radius: 50%;
+    @media (min-width: 1440px) {
+      margin: 20% 22%;
+    }
+  }
+  &:checked:before {
+    background: $primary-color;
   }
 }
 
@@ -58,6 +112,9 @@ body {
 .modal-content {
   border-radius: 10px;
   margin-bottom: 130px;
+  @media (min-width: 1440px) {
+    margin-bottom: 275px;
+  }
 }
 
 // .modal-backdrop {
