--- a/src/components/RadioButtons/RadioButtons.module.scss
+++ b/src/components/RadioButtons/RadioButtons.module.scss
@@ -1,7 +1,25 @@
 @import "../../style.scss";
 
-.campaignCard {
-  @include campaignCardModal;
+.campaignCard,
+.campaignCardDisabled {
+  border: 1px solid #d5d0d0;
+  border-radius: 7px;
+  padding: 20px 22px 16px 22px;
+  font-size: 14px;
+  margin-top: 24px;
+  margin-bottom: 24px;
+  @media (min-width: 1440px) {
+    padding: 24px 26px 24px 27px;
+    position: relative;
+  }
+}
+
+.campaignCardDisabled {
+  opacity: 0.5;
+  input:hover {
+    box-shadow: none;
+    cursor: default;
+  }
 }
 
 .inputAndLabel {
@@ -15,10 +33,73 @@
   }
 }
 
-input[type="radio"] {
-  @include radioButton;
+.inputLabelAndPledgeAmount {
+  display: flex;
+  align-items: center;
+  margin-bottom: 26px;
+  @media (min-width: 1440px) {
+    margin-bottom: 0;
+    padding-bottom: 0;
+  }
 }
 
+.labelAndPledgeAmount {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 45px;
+  @media (min-width: 1440px) {
+    flex-direction: row;
+    align-items: center;
+    padding-bottom: 10px;
+  }
+}
+
+.pledgeAmount {
+  margin-bottom: 0;
+  color: $primary-color;
+  @media (min-width: 1440px) {
+    font-size: 16px;
+    font-weight: 500;
+  }
+}
+
+input[type="radio"] {
+  border: 1px solid #d5d0d0;
+  border-radius: 50%;
+  -webkit-appearance: none;
+  width: 22px;
+  height: 22px;
+  margin-right: 16px;
+  outline: none;
+  @media (min-width: 1440px) {
+    cursor: pointer;
+    width: 24px;
+    height: 24px;
+    margin-right: 25px;
+  }
+  &:hover {
+    @media (min-width: 1440px) {
+      box-shadow: 0 0 5px 0px $primary-color inset;
+    }
+  }
+  &:before {
+    content: "";
+    display: block;
+    width: 60%;
+    height: 60%;
+    margin: 20% auto;
+    border-radius: 50%;
+    @media (min-width: 1440px) {
+      margin: 20% 22%;
+    }
+  }
+  &:checked:before {
+    background: $primary-color;
+  }
+}
+
+.product,
 .noProduct {
   font-weight: 700;
   @media (min-width: 1440px) {
@@ -34,5 +115,37 @@ input[type="radio"] {
 }
 
 .description {
-  @include productDescriptionModal;
+  color: $paragraph-color;
+  margin-bottom: 14px;
+  line-height: 24px;
+  @media (min-width: 1440px) {
+    font-size: 15px;
+    line-height: 28px;
+    padding-left: 50px;
+    margin-bottom: 8px;
+  }
+}
+
+.stockLeft {
+  display: flex;
+  align-items: center;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  @media (min-width: 1440px) {
+    position: absolute;
+    top: 23px;
+    right: 27px;
+  }
+}
+
+.stock {
+  font-size: 18px;
+  font-weight: 700;
+  margin: 0 0 6px 0;
+}
+
+.left {
+  font-size: 16px;
+  color: $paragraph-color;
+  margin: 0 0 8px 8px;
 }
