--- a/src/pages/Project.module.scss
+++ b/src/pages/Project.module.scss
@@ -14,11 +14,7 @@
   flex-direction: column;
   align-items: center;
   background-color: #fafafa;
-  width: 375px;
-  // Desktop
-  @media (min-width: 1440px) {
-    width: 1440px;
-  }
+  width: 100%;
 
   .mainSection {
     display: flex;
