--- a/src/style.scss
+++ b/src/style.scss
@@ -35,6 +35,11 @@ body {
   background-color: #0e0e0e;
   display: flex;
   justify-content: center;
+  width: 100%;
+}
+
+#root {
+  width: 100%;
 }
 
 .modal-dialog {
