--- a/src/components/ProductCampaignList/ProductCampaignList.module.scss
+++ b/src/components/ProductCampaignList/ProductCampaignList.module.scss
@@ -27,17 +27,6 @@
   border: 2px solid $primary-color;
 }
 
-.inputAndLabel {
-  display: flex;
-  align-items: center;
-  padding-top: 12px;
-  margin-bottom: 34px;
-  @media (min-width: 1440px) {
-    margin-bottom: 0;
-    padding-bottom: 8px;
-  }
-}
-
 .inputLabelAndPledgeAmount {
   display: flex;
   align-items: center;
@@ -102,18 +91,11 @@ input[type="radio"] {
   }
 }
 
-.product,
-.noProduct {
+.product {
   font-weight: 700;
   @media (min-width: 1440px) {
     font-size: 16px;
     padding-right: 18px;
-  }
-}
-
-.noProduct {
-  @media (min-width: 1440px) {
-    padding-bottom: 10px;
   }
 }
 
