--- a/src/components/ProjectHeader/ProjectHeader.module.scss
+++ b/src/components/ProjectHeader/ProjectHeader.module.scss
@@ -10,7 +10,9 @@
   align-items: center;
   text-align: center;
   padding: 54px 26px 0 26px;
-  // DESKTOP
+  @media (min-width: 992px) {
+    height: 250px;
+  }
   @media (min-width: 1440px) {
     height: 266px;
   }
@@ -19,7 +21,9 @@
     position: absolute;
     top: -30px;
     left: 135px;
-    // Desktop
+    @media (min-width: 992px) {
+      left: 236px;
+    }
     @media (min-width: 1440px) {
       left: 336px;
     }
@@ -30,7 +34,10 @@
     font-weight: 700;
     margin-bottom: 16px;
     width: 200px;
-    // Desktop
+    @media (min-width: 992px) {
+      font-size: 22px;
+      width: 600px;
+    }
     @media (min-width: 1440px) {
       font-size: 28px;
       width: 600px;
@@ -41,22 +48,20 @@
     font-size: 14px;
     color: $paragraph-color;
     margin-bottom: 26px;
-    //mobile
     line-height: 24px;
-    // Desktop
     @media (min-width: 1440px) {
       font-size: 16px;
       margin-bottom: 36px;
-      // line-height: 0;
     }
   }
 
   .buttons {
     display: flex;
     justify-content: space-between;
-    // mobile
     width: 282px;
-    // Desktop
+    @media (min-width: 992px) {
+      width: 476px;
+    }
     @media (min-width: 1440px) {
       width: 638px;
     }
@@ -75,20 +80,18 @@
       background: $hover-color;
     }
     // Desktop
-    @media (min-width: 1440px) {
+    @media (min-width: 992px) {
       width: 204px;
     }
   }
 
-  // Mobile
-  @media (max-width: 1440px) {
+  @media (max-width: 992px) {
     .bookmarkBtn {
       display: none;
     }
   }
 
-  // Desktop
-  @media (min-width: 1440px) {
+  @media (min-width: 992px) {
     .bookmarkBtn {
       width: 176px;
       height: 56px;
