--- a/src/components/StatusCard/StatusCard.module.scss
+++ b/src/components/StatusCard/StatusCard.module.scss
@@ -11,31 +11,39 @@
   @include cardDesign;
   text-align: center;
   padding: 0 22px;
-  // Desktop
-  @media (min-width: 1440px) {
+  @media (min-width: 992px) {
     height: 210px;
     display: grid;
+    grid-template-columns: 175px 1fr 1fr;
+    padding: 46px 26px;
+    text-align: left;
+  }
+  @media (min-width: 1440px) {
     grid-template-columns: 150px 300px auto;
     padding: 46px;
-    text-align: left;
   }
 
   .moneyBacked {
     height: 122px;
-    @media (min-width: 1440px) {
+    @media (min-width: 992px) {
       height: 0;
+      padding-right: 40px;
+    }
+    @media (min-width: 1440px) {
+      padding: 0;
+      padding-right: 0;
     }
     h1 {
       @include font-h1;
       padding-top: 30px;
-      @media (min-width: 1440px) {
+      @media (min-width: 992px) {
         padding: 0;
       }
     }
     p {
       color: $paragraph-color;
       font-size: 14px;
-      @media (min-width: 1440px) {
+      @media (min-width: 992px) {
         margin: 0;
       }
     }
@@ -48,23 +56,26 @@
     display: table;
     margin-left: auto;
     margin-right: auto;
-    @media (min-width: 1440px) {
+    @media (min-width: 992px) {
       height: 0;
       border-width: 0 1px 0 1px;
+      padding: 0 40px 0 40px;
+    }
+    @media (min-width: 1440px) {
       padding: 0 100px 0 50px;
     }
 
     h1 {
       @include font-h1;
       padding-top: 22px;
-      @media (min-width: 1440px) {
+      @media (min-width: 992px) {
         padding: 0;
       }
     }
     p {
       color: $paragraph-color;
       font-size: 14px;
-      @media (min-width: 1440px) {
+      @media (min-width: 992px) {
         margin: 0;
       }
     }
@@ -72,20 +83,24 @@
 
   .daysLeft {
     height: 122px;
-    @media (min-width: 1440px) {
+    @media (min-width: 992px) {
       height: 40px;
+      padding-left: 40px;
+    }
+    @media (min-width: 1440px) {
+      padding-left: 0;
     }
     h1 {
       @include font-h1;
       padding-top: 20px;
-      @media (min-width: 1440px) {
+      @media (min-width: 992px) {
         padding: 0;
       }
     }
     p {
       color: $paragraph-color;
       font-size: 14px;
-      @media (min-width: 1440px) {
+      @media (min-width: 992px) {
         margin: 0;
       }
     }
@@ -95,7 +110,7 @@
     height: 12px;
     border-radius: 14px;
     // Desktop
-    @media (min-width: 1440px) {
+    @media (min-width: 992px) {
       grid-column: 1 / 4;
       margin-top: 30px;
     }
