--- a/src/components/CampaignList/CampaignList.module.scss
+++ b/src/components/CampaignList/CampaignList.module.scss
@@ -1,6 +1,7 @@
 @import "../../style.scss";
 
-.campaignCard {
+.campaignCard,
+.campaignCardSelected {
   border: 1px solid #d5d0d0;
   border-radius: 7px;
   padding: 20px 22px 16px 22px;
@@ -13,6 +14,10 @@
   }
 }
 
+.campaignCardSelected {
+  border: 2px solid $primary-color;
+}
+
 .inputAndLabel {
   display: flex;
   align-items: center;
@@ -20,7 +25,7 @@
   margin-bottom: 34px;
   @media (min-width: 992px) {
     margin-bottom: 0;
-    padding-bottom: 16px;
+    padding-bottom: 22px;
   }
   @media (min-width: 1440px) {
     padding-bottom: 8px;
