--- a/src/components/Pledge/Pledge.module.scss
+++ b/src/components/Pledge/Pledge.module.scss
@@ -70,6 +70,9 @@
       width: 108px;
     }
   }
+  .buttonDisabled:hover {
+    background-color: $primary-color;
+  }
 
   .placeholder {
     background-color: white;
