--- a/src/components/PledgeList/PledgeList.module.scss
+++ b/src/components/PledgeList/PledgeList.module.scss
@@ -1,66 +1,34 @@
 @import "../../style.scss";
 
-.campaignCard,
-.campaignCardDisabled,
-.campaignCardSelected {
+.pledgeCard,
+.pledgeCardSelected {
   border: 1px solid #d5d0d0;
   border-radius: 7px;
-  padding: 20px 22px 38px 22px;
+  padding: 20px 22px 16px 22px;
   font-size: 14px;
   margin-top: 24px;
   margin-bottom: 24px;
   @media (min-width: 992px) {
-    padding: 24px 26px 38px 27px;
+    padding: 24px 26px 24px 27px;
     position: relative;
   }
-  @media (min-width: 992px) {
-    padding: 24px 26px 42px 27px;
-  }
 }
 
-.campaignCardDisabled {
-  opacity: 0.5;
-  input:hover {
-    box-shadow: none;
-    cursor: default;
-  }
-}
-
-.campaignCardSelected {
+.pledgeCardSelected {
   border: 2px solid $primary-color;
 }
 
-.inputLabelAndPledgeAmount {
+.inputAndLabel {
   display: flex;
   align-items: center;
-  margin-bottom: 26px;
+  padding-top: 12px;
+  margin-bottom: 34px;
   @media (min-width: 992px) {
     margin-bottom: 0;
     padding-bottom: 22px;
   }
   @media (min-width: 1440px) {
-    padding-bottom: 0;
-  }
-}
-
-.labelAndPledgeAmount {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 45px;
-  @media (min-width: 1440px) {
-    flex-direction: row;
-    align-items: center;
-    padding-bottom: 10px;
-  }
-}
-
-.pledgeAmount {
-  margin-bottom: 0;
-  color: $primary-color;
-  @media (min-width: 992px) {
-    font-size: 16px;
-    font-weight: 500;
+    padding-bottom: 8px;
   }
 }
 
@@ -72,8 +40,8 @@ input[type="radio"] {
   height: 22px;
   margin-right: 16px;
   outline: none;
-  @media (min-width: 1440px) {
-    cursor: pointer;
+  cursor: pointer;
+  @media (min-width: 992px) {
     width: 24px;
     height: 24px;
     margin-right: 25px;
@@ -88,7 +56,7 @@ input[type="radio"] {
     height: 60%;
     margin: 20% auto;
     border-radius: 50%;
-    @media (min-width: 1440px) {
+    @media (min-width: 992px) {
       margin: 20% 22%;
     }
   }
@@ -97,11 +65,14 @@ input[type="radio"] {
   }
 }
 
-.product {
+.noProduct {
   font-weight: 700;
   @media (min-width: 992px) {
     font-size: 16px;
+  }
+  @media (min-width: 1440px) {
     padding-right: 18px;
+    padding-bottom: 10px;
   }
 }
 
@@ -117,28 +88,4 @@ input[type="radio"] {
   @media (min-width: 1440px) {
     padding-left: 50px;
   }
-}
-
-.stockLeft {
-  display: flex;
-  align-items: center;
-  padding-top: 6px;
-  padding-bottom: 6px;
-  @media (min-width: 992px) {
-    position: absolute;
-    top: 18px;
-    right: 27px;
-  }
-}
-
-.stock {
-  font-size: 18px;
-  font-weight: 700;
-  margin: 0 0 6px 0;
-}
-
-.left {
-  font-size: 16px;
-  color: $paragraph-color;
-  margin: 0 0 8px 8px;
 }
