--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -2,19 +2,18 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: #aaa;
   width: 100%;
   position: fixed;
   padding: 24px 24px;
   background: transparent;
-  // Desktop
   @media (min-width: 992px) {
-    padding: 48px 64px;
+    padding: 12px 64px;
+    margin: 36px 0;
     z-index: 1;
   }
   @media (min-width: 1440px) {
-    padding: 48px 164px;
-    z-index: 1;
+    padding: 12px 164px;
+    // z-index: 1;
   }
 
   .logo {
@@ -22,13 +21,13 @@
     font-weight: 600;
     font-size: 26px;
     @media (min-width: 992px) {
-      // Desktop
       color: #fef8f0;
     }
   }
 
   .menuIcon {
     cursor: pointer;
+    fill: white;
     margin-bottom: 6px;
     @media (min-width: 992px) {
       display: none;
@@ -46,9 +45,30 @@
     font-size: 14px;
     color: #fffeff;
     cursor: pointer;
-
     @media (max-width: 992px) {
       display: none;
     }
+  }
+
+  .logoActive,
+  .linksActive {
+    color: #000;
+  }
+
+  .menuIconActive {
+    fill: #000;
+  }
+}
+
+.active {
+  background: #fff;
+  padding: 16px 24px;
+  z-index: 1;
+  @media (min-width: 992px) {
+    padding: 24px 64px;
+    margin: 0;
+  }
+  @media (min-width: 1440px) {
+    padding: 24px 164px;
   }
 }
