set up unit tests

--- a/src/components/ProjectHeader/ProjectHeader.module.scss
+++ b/src/components/ProjectHeader/ProjectHeader.module.scss
@@ -1,5 +1,5 @@
 @import "../../style.scss";
-@import "../../pages/Project.module.scss";
+@import "../Project/Project.module.scss";
 
 .backProjectCard {
   height: 284px;
