--- a/src/components/StatusCard/StatusCard.module.scss
+++ b/src/components/StatusCard/StatusCard.module.scss
@@ -1,4 +1,4 @@
-@import "../../pages/Project.module.scss";
+@import "../Project/Project.module.scss";
 @import "../../style.scss";
 
 @mixin font-h1 {
